--- a/README
+++ b/README
@@ -1,42 +1,46 @@
-## Author Name
-* - Ezra Kipchumba
+AgriPlus    website 
+Portfolio By Ezra Kipchumba
+## Table of Content Description 
 
+1. [Description-of-my-website](#More-details-about-the-project)
+2. [Installation-Requirements]()
+3. [Technology Used](#Explains-the-tools-used)
+4. [Reference]()
+5. [Licence]()
+6. [Authors-Info]()
 
-## Project Name
-* - AgriPlus-Website
+## Description
+This project was on an Agricultural e-commerce website.
+## Installation
 
+## Requirements
+* Either a computer,phone,tablet or an Ipad
+* An access to the Internet
 
-# Description
-* - It is a website that markets and links farmers and customers to various farm products
+## Installation
+It can run in any browser
 
+[Go back to top](go-back-to-top)
 
-## Technologies used
-1. HTML
-2. CSS
+## Technology Used
+* HTML - which was used to build the structure of the pages.
+* CSS - which was used to style the page.
 
-## Program set up instructions
-1. clone the repository to your desktop using :git clone https://github.com/Ezra-Kipchumba/AgriPlus-Website
-2. navigate to the directory with cd 
-3. add Css and index.html in your browser
-4. using code . access the program
+## Reference
+* W3 Schools,
+* CSS tricks
 
-
-### LIVE DEMO
-Live [live](https://ezra-kipchumba.github.io/AgriPlus-Website/) 
-
-
-### License and Copyright
-
-MIT License
-
+## License
 Copyright (c) [2022] [Ezra Kipchumba]
 
-Permission is hereby granted, free of charge, to any person obtaining a copy
-of this software and associated documentation files (the "Software"), to deal
-in the Software without restriction, including without limitation the rights
-to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
-copies of the Software, and to permit persons to whom the Software is
-furnished to do so, subject to the following conditions:
+Permission is hereby granted, free of charge, to any person obtaining a copy of this software and associated documentation files (the "Software"), to deal in the Software without restriction, including without limitation the rights to use, copy, modify, merge, publish, distribute, sublicense, and/or sell copies of the Software, and to permit persons to whom the Software is furnished to do so, subject to the following conditions:
+The above copyright notice and this permission notice shall be included in all copies or substantial portions of the Software.
 
-The above copyright notice and this permission notice shall be included in all
-copies or substantial portions of the Software.
+THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY, FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM, OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.
+
+[Go back to top](Go-Back-to-top)
+
+# Authors Info
+Linkedin Profile - [Ezra Kipchumba]
+
+Slack Profile - [Ezra Kipchumba]
